Need to do google integraiton

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           >
               <input name="Name" type="text" placeholder="Name" required>
               <input name="Email" type="email" placeholder="Email" color = "#9bddff" required>
-           <h6>Share contact with other attendees?</h6>
+           <h6>Share participation with other organizations?</h6>
           <label class = "switch"> <input name="SHARE PARTICIPATION WITH OTHER ORGANIZATIONS?" type="checkbox"i checked><span class = "slider round"></span></label>
       </div>
               <button class = "button" type="submit">Submit</button>
