--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
     <section class ="section-picture">
       <div style="display:block; width: 100%;">
           <div class = "column" style="padding-left:10px; padding-right:10px">
-                  <h2 style = "text-align: center;">Eco-friendly logistics</h2>
+                  <h2 style = "text-align: center;">Fleet emissions tracking and reporting made simple</h2>
                   <hr>
                   <p class="lead">
-                    Our platform is transforming the maritime industry by certifying efficiency gains and enabling shipping companies to offer premium carbon-free shipment rates to their customers. We provide a solution that not only addresses the growing demand for sustainable shipping but also turns it into a profitable opportunity.
+                    Manage and report emissions data for scope 3, Fuel EU, and EU ETS
                   </p>
 
           </div>
