--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
           <div class = "column" style="padding-left:10px; padding-right:10px">
                   <h2 style = "text-align: center;">Fleet emissions tracking and reporting made simple</h2>
                   <hr>
-                  <p class="lead">
-                    Manage and report emissions data for scope 3, Fuel EU, and EU ETS
+                  <p style = "text-align: center;" class="lead">
+                    Manage and report emissions data for Scope 3, Fuel EU, and EU ETS
                   </p>
 
           </div>
@@ -204,7 +204,7 @@
           <form
             id="my-form"
             method="POST" 
-            action="https://script.google.com/macros/s/AKfycbwZP3hwCfmK5D1GDGY9O7e_E7CDp35QgDiEVCIznIIF5MsjbFeSkoe9vgOrnaXXS-NKNw/exec"
+            action="https://script.google.com/macros/s/AKfycbzCgl3NcER5Filmc8jmcfgX_1Fb6XqKrYLs1wzAzuJnbP5pBZKTLXp5qZXQJVuoe-NR/exec"
                               style = "width: max(50%, min(500px, 75%)); text-align: center; margin: 0 auto"
           >
               <input name="Name" type="text" placeholder="Name" required>
