--- a/index.html
+++ b/index.html
@@ -204,13 +204,13 @@
           <form
             id="my-form"
             method="POST" 
-            action="https://script.google.com/macros/s/AKfycbzCgl3NcER5Filmc8jmcfgX_1Fb6XqKrYLs1wzAzuJnbP5pBZKTLXp5qZXQJVuoe-NR/exec"
+            action="https://script.google.com/macros/s/AKfycbyeDpQBvYkudormv-y8SARKH0_5qfNvzhrSugiHDwCWQy0R-S_OCwXEFupKQVH8Q6ud/exec"
                               style = "width: max(50%, min(500px, 75%)); text-align: center; margin: 0 auto"
           >
               <input name="Name" type="text" placeholder="Name" required>
-              <input name="Email" type="email" placeholder="Email" color = "#9bddff" required>
+              <input name="Email" type="email" placeholder="Email" required>
            <h6>Share participation with other organizations?</h6>
-          <label class = "switch"> <input name="SHARE PARTICIPATION WITH OTHER ORGANIZATIONS?" type="checkbox"i checked><span class = "slider round"></span></label>
+          <label class = "switch"> <input name="SHARE PARTICIPATION WITH OTHER ORGANIZATIONS?" type="checkbox" checked><span class = "slider round"></span></label>
       </div>
               <button class = "button" type="submit">Submit</button>
           </form>
