--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <br></br>
                         <br></br>
                         <h1>Ocean Treasury</h1>
-                        <h5>Revolutionizing Green Shipping</h5>
+                        <h5>Modernizing maritime operations</h5>
                     </div>
 
                     <div class = "bottom">
@@ -60,10 +60,10 @@
     <section class ="section-picture">
       <div style="display:block; width: 100%;">
           <div class = "column" style="padding-left:10px; padding-right:10px">
-                  <h2 style = "text-align: center;">Fleet emissions tracking and reporting made simple</h2>
+                  <h2 style = "text-align: center;">Vessel management made simple</h2>
                   <hr>
                   <p style = "text-align: center;" class="lead">
-                    Manage and report emissions data for Scope 3, Fuel EU, and EU ETS
+                    Automated workflows and data-driven communications
                   </p>
 
           </div>
