--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="description" content="Maritime insurance claims management powered by AI">
     <meta name="author" content="Justin Law">
     <title>Ocean Treasury - Maritime Insurance Claims Management</title>
-    <!-- <link rel="icon" href="favicon.ico"> -->
+    <link rel="icon" href="favicon.ico">
     <link rel="shortcut icon" type="image/png" href="assets/OceanTreasuryLogo.png"/>
-    <!-- <link href="https://fonts.googleapis.com/css?family=Darker+Grotesque&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Darker+Grotesque&display=swap" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet">
     <script src="./scripts.js"></script>
 </head>
