--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                 </div>
                 <div class="form-right">
                     <div class="consent">
-                        <span class="consent-text">Allow us to share your participation in our beta with our organizations?</span>
+                        <span class="consent-text">Sign up for newsletter and updates?</span>
                     </div>
-                    <span class="consent-note">NOTE: we only share organization name, and never share any personal information we collect with 3rd parties.</span>
+                    <span class="consent-note">NOTE: We never share any personal information we collect with 3rd parties</span>
                     <label class="toggle">
                         <input type="checkbox" name="Consent" id="consent-checkbox" checked>
                         <span class="slider round"></span>
