--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
     <footer>
         <img src="assets/OceanTreasuryLogoWithText.png" alt="Ocean Treasury Logo">
         <div class="social">
-            <a href="mailto:justin@oceantreasury.com">
-                <i class="fa fa-envelope"></i>
+            <a href="mailto:justin@oceantreasury.com">justin@oceantreasury.com
             </a>
         </div>
     </footer>
