--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="shortcut icon" type="image/png" href="assets/smallLogo.png"/>
     <link href="./css/style.css" rel="stylesheet">
-    
+    <link href="./css/responsive.css" rel="stylesheet">
 
 </head>
 <body>
