--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <img src="assets/Logo.png" alt="Ocean Treasury Logo" width="383px" height="54.26px">
+                <img src="assets/Logo.png" alt="Ocean Treasury Logo">
             </div>
             <a href="#get-access" class="get-access-btn">Get Early Access</a>
         </header>
@@ -183,7 +183,7 @@
         <div class="footer-content">
           <div class="footer-left">
             <div class="footer-logo">
-              <img src="assets/Logo.png" alt="Ocean Treasury Logo" width="383" height="54.26">
+              <img src="assets/Logo.png" alt="Ocean Treasury Logo">
             </div>
           </div>
           <div class="footer-right">
