--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <section class="hero">
                 <h1>Maritime Insurance. <span class="blue-text">Simplified.</span></h1>
                 <p class="subheading">Turn your data into your <span class="blue-text">competitive edge.</span></p>
+                <div class="hero-cta">
+                    <a href="#get-access" class="get-access-btn">Get Early Access</a>
+                </div>
                 <img src="assets/dashboard.png" alt="Dashboard Preview" class="dashboard-preview">
             </section>
             
