--- a/index.html
+++ b/index.html
@@ -144,28 +144,28 @@
         <div class="early-access-content">
             <div class="form-container">
                 <div class="form-left">
-                <form>
+                <form id="early-access-form" method="POST">
                     <div class="input-group">
                         <label for="firstName">First Name</label>
-                        <input type="text" id="firstName" placeholder="John">
+                        <input type="text" id="firstName" name="First Name" placeholder="John" required>
                     </div>
                     <div class="input-group">
                         <label for="lastName">Last Name</label>
-                        <input type="text" id="lastName" placeholder="Doe">
+                        <input type="text" id="lastName" name="Last Name" placeholder="Doe">
                     </div>
                     <div class="input-group">
                         <label for="phone">Phone Number</label>
-                        <input type="tel" id="phone" placeholder="+1 (123) 456-7890">
+                        <input type="tel" id="phone" name="Phone Number" placeholder="+1 (123) 456-7890">
                     </div>
                     <div class="input-group">
                         <label for="email">Email</label>
-                        <input type="email" id="email" placeholder="john@email.com">
+                        <input type="email" id="email" name="Email" placeholder="john@email.com" required>
                     </div>
                     <div class="input-group">
                         <label for="company">Company Name</label>
-                        <input type="text" id="company" placeholder="Company Inc.">
+                        <input type="text" id="company" name="Company Name" placeholder="Company Inc.">
                     </div>
-                    <button type="submit" class="submit-btn">Submit</button>                
+                    <button type="submit" id=submitBtn class="submit-btn">Submit →</button>                
                 </form>
             </div>
             <div class="form-right">
@@ -173,7 +173,7 @@
                     <p>Sign up for our newsletter and stay up to date on our progress?</p>
                     <p class="note">We never share any personal information we collect with 3rd parties.</p>
                     <label class="toggle-switch">
-                        <input type="checkbox">
+                        <input type="checkbox" id="consent-checkbox" checked>
                         <span class="slider"></span>
                     </label>
                 </div>
