Updated Image formatst to webp Updated label + placeholder behavior on form Adjusted font sizes on smaller screens

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <img src="assets/logo.png" alt="Ocean Treasury Logo">
+                <img src="assets/logo.webp" alt="Ocean Treasury Logo">
             </div>
             <a href="#get-access" class="get-access-btn">Get Early Access</a>
         </header>
@@ -34,7 +34,7 @@
                 <div class="hero-cta">
                     <a href="#get-access" class="get-access-btn">Get Early Access</a>
                 </div>
-                <img src="assets/dashboard.png" alt="Dashboard Preview" class="dashboard-preview">
+                <img src="assets/dashboard.webp" alt="Dashboard Preview" class="dashboard-preview">
             </section>
             
             <div class="bottom-line"></div>
@@ -143,24 +143,24 @@
                 <div class="form-left">
                 <form id="early-access-form" method="POST">
                     <div class="input-group">
+                        <input type="text" id="firstName" name="First Name" placeholder="First Name">
                         <label for="firstName">First Name</label>
-                        <input type="text" id="firstName" name="First Name" placeholder="John" required>
                     </div>
                     <div class="input-group">
+                        <input type="text" id="lastName" name="Last Name" placeholder="Last Name">
                         <label for="lastName">Last Name</label>
-                        <input type="text" id="lastName" name="Last Name" placeholder="Doe">
                     </div>
                     <div class="input-group">
+                        <input type="tel" id="phone" name="Phone Number" placeholder="Phone Number">
                         <label for="phone">Phone Number</label>
-                        <input type="tel" id="phone" name="Phone Number" placeholder="+1 (123) 456-7890">
                     </div>
                     <div class="input-group">
+                        <input type="email" id="email" name="Email" placeholder="Email" required>
                         <label for="email">Email</label>
-                        <input type="email" id="email" name="Email" placeholder="john@email.com" required>
                     </div>
                     <div class="input-group">
+                        <input type="text" id="company" name="Company Name" placeholder="Company Name">
                         <label for="company">Company Name</label>
-                        <input type="text" id="company" name="Company Name" placeholder="Company Inc.">
                     </div>
                     <button type="submit" id=submitBtn class="submit-btn">Submit →</button>                
                 </form>
@@ -182,7 +182,7 @@
         <div class="footer-content">
           <div class="footer-left">
             <div class="footer-logo">
-              <img src="assets/logo.png" alt="Ocean Treasury Logo">
+              <img src="assets/logo.webp" alt="Ocean Treasury Logo">
             </div>
           </div>
           <div class="footer-right">
