--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             </nav>
             
             <section class="hero">
-                <h1>Maritime Insurance. <span class="blue-text">Simplified.</span></h1>
-                <p class="subheading">Turn your data into your <span class="blue-text">competitive edge.</span></p>
+                <h1>Maritime visual analytics</h1>
+                <p class="subheading">Unlock fleet visibility with a <span class="blue-text">bird's eye view</span></p>
                 <div class="hero-cta">
                     <a href="#get-access" class="get-access-btn">Get Early Access</a>
                 </div>
-                <img src="assets/dashboard.webp" alt="Dashboard Preview" class="dashboard-preview">
+                <img src="assets/dashboard.png" alt="Dashboard Preview" class="dashboard-preview">
             </section>
             
             <div class="bottom-line"></div>
@@ -50,8 +50,8 @@
                 </div>
                 <div class="oceans-rough-box">
                     <h3>Oceans Are Rough</h3>
-                    <p>The maritime industry files <span class="blue-text-oceans-rough">$20B+ USD</span> in insurance claims annually. The stakes are high, and navigating the complexities of cargo insurance can be overwhelming.</p>
-                    <p>We created Ocean Treasury to streamline and optimize your insurance claims, ensuring you <span class="blue-text-oceans-rough">recover the maximum value</span> from your policy.</p>
+                    <p>The maritime industry files <span class="blue-text-oceans-rough">$20B+ USD</span> in insurance claims annually. The stakes are high, and keeping track of everything that happens on your vessel can be overwhelming.</p>
+                    <p>We created Ocean Treasury to provide visual analytics for your fleets, so that your captain and crew can <span class="blue-text-oceans-rough">track the health of their vessel easily and securely.</span> We know the oceans are rough, so when you need it, our software provides you the documentation you need for insurance claims so that you can <span class="blue-text-oceans-rough">recover the maximum value</span> from your policy.</p>
                 </div>
             </div>
         </div> 
@@ -63,19 +63,19 @@
             <div class="how-it-works-content">
                 <div class="how-it-works-left">
                     <p class="main-text">
-                        Instead of chasing down paper trails of operational emails for each voyage in your fleet, Ocean Treasury identifies <strong>when</strong> you should file a claim and <strong>submits it for you</strong>.
+                        Ocean Treasury gives you a birds eye view with AI-empowered CCTV cameras to track <strong>key vessel operations</strong> and analyze CCTV archives <strong> with ease.</strong>
                     </p>
                     <p> 
                         <span class="main-text">So </span>
                         <span class="focus-text"> you </span> 
                         <span class="main-text"> can </span> 
-                        <span class="focus-text"> focus on operating.</span>
+                        <span class="focus-text"> optimize and protect your operations.</span>
                     </p>
                 </div>
                 <div class="how-it-works-right">
                     <ul class="feature-list">
                         <li>AI Powered Automation</li>
-                        <li>Claims Transparency</li>
+                        <li>Operational Transparency</li>
                         <li>Accuracy & Consistency</li>
                     </ul>
                 </div>
@@ -94,7 +94,7 @@
                         <div class="faq-toggle"></div>
                     </div>
                     <div class="faq-answer">
-                        We created Ocean Treasury as a result of our experiences working in the intersection of technology and supply chain. Our backgrounds span across maritime, insurance, supply chain, and deep technology we've seen the impact technology can make at scale, and we are committed to taking down administrative burdens by building better software.
+                        We created Ocean Treasury as a result of our experiences working in the intersection of technology and supply chain. Our backgrounds span across maritime, insurance, supply chain, and deep technology. We've seen the impact technology can make at scale, and we are committed to improving maritime by building better software.
                     </div>
                 </div>
                 <div class="faq-item">
@@ -112,7 +112,7 @@
                         <div class="faq-toggle"></div>
                     </div>
                     <div class="faq-answer">
-                        We use your data to enable better claims management and processing by reconciling insurance claimable expenses against your charter-parties, contracts, and insurance policies. You retain control over all company and customer data and any confidential information. Ocean Treasury takes data security and privacy seriously. We store customer secrets such as API keys using secure methods, and are pursuing SOC2 certification.
+                        We process your CCTV data securely and indepedently from external databases. You retain control over all company and customer data and any confidential information. Ocean Treasury takes data security and privacy seriously. We store customer secrets such as API keys using secure methods, and are pursuing SOC2 certification.
                     </div>
                 </div>
                 <div class="faq-item">
@@ -121,7 +121,7 @@
                         <div class="faq-toggle"></div>
                     </div>
                     <div class="faq-answer">
-                        Ocean Treasury uses several different AI models to analyze and automate different steps of the insurance process, including large language models and browser agents. Some of these models are prompted and/or trained using our proprietary datasets which are specific to maritime insurance.
+                        Ocean Treasury uses several different AI models to analyze and automate different steps of the insurance process, including large language models and image models. Some of these models are prompted and/or trained using our proprietary datasets which are specific to maritime operations.
                     </div>
                 </div>
             </div>
