--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             
             <section class="hero">
                 <h1>Maritime visual analytics</h1>
-                <p class="subheading">Unlock fleet visibility with a <span class="blue-text">bird's eye view</span></p>
+                <p class="subheading">Maximize vessel visibility with a <span class="blue-text">bird's eye view</span></p>
                 <div class="hero-cta">
                     <a href="#get-access" class="get-access-btn">Get Early Access</a>
                 </div>
