--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 </div>
                 <div class="oceans-rough-box">
                     <h3>Oceans Are Rough</h3>
-                    <p>The maritime industry files <span class="blue-text-oceans-rough">$20B+ USD</span> in insurance claims annually. The stakes are high, and keeping track of everything that happens on your vessel can be overwhelming.</p>
-                    <p>We created Ocean Treasury to provide visual analytics for your fleets, so that your captain and crew can <span class="blue-text-oceans-rough">track the health of their vessel easily and securely.</span> We know the oceans are rough, so when you need it, our software provides you the documentation you need for insurance claims so that you can <span class="blue-text-oceans-rough">recover the maximum value</span> from your policy.</p>
+                    <p>The maritime industry files <span class="blue-text-oceans-rough">$20B+ USD</span> in insurance claims annually. Stakes are high, and keeping track of everything can be overwhelming.</p>
+                    <p>We created Ocean Treasury to provide visual analytics for your fleets, so that your captain and crew can <span class="blue-text-oceans-rough">see and document the health of you vessel easily and securely.</span>
                 </div>
             </div>
         </div> 
