--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="oceans-rough-box">
                     <h3>Oceans Are Rough</h3>
                     <p>The maritime industry files <span class="blue-text-oceans-rough">$20B+ USD</span> in insurance claims annually. Stakes are high, and keeping track of everything can be overwhelming.</p>
-                    <p>We created Ocean Treasury to provide visual analytics for your fleets, so that your captain and crew can <span class="blue-text-oceans-rough">see and document the health of you vessel easily and securely.</span>
+                    <p>We created Ocean Treasury to provide visual analytics for your fleets, so that your captain and crew can <span class="blue-text-oceans-rough">track and document the health of you vessel easily and securely.</span>
                 </div>
             </div>
         </div> 
