--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </nav>
             
             <section class="hero">
-                <h1>Maritime visual analytics</h1>
+                <h1>Digital insights for the physical world</h1>
                 <p class="subheading">Maximize vessel visibility with a <span class="blue-text">bird's eye view</span></p>
                 <div class="hero-cta">
                     <a href="#get-access" class="get-access-btn">Get Early Access</a>
