Updates for Lionsight V2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Maritime Insurance Claims Management Powered by AI">
+    <meta name="description" content="Digital Insights for the Physical World ">
     <title>Ocean Treasury</title>
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="shortcut icon" type="image/png" href="assets/smallLogo.png"/>
@@ -29,12 +29,12 @@
             </nav>
             
             <section class="hero">
-                <h1>Digital insights for the physical world</h1>
-                <p class="subheading">Maximize vessel visibility with a <span class="blue-text">bird's eye view</span></p>
+                <h1>AI Powered <span class="blue-text">Video Intelligence</span></h1>
+                <p class="subheading">Digital insights for the <span class="blue-text">physcial world</span></p>
                 <div class="hero-cta">
                     <a href="#get-access" class="get-access-btn">Get Early Access</a>
                 </div>
-                <img src="assets/dashboard.png" alt="Dashboard Preview" class="dashboard-preview">
+                <img src="assets/dashboard.webp" alt="Dashboard Preview" class="dashboard-preview">
             </section>
             
         </div>
@@ -50,7 +50,7 @@
                 <div class="oceans-rough-box">
                     <h3>Oceans Are Rough</h3>
                     <p>The maritime industry files <span class="blue-text-oceans-rough">$20B+ USD</span> in insurance claims annually. Stakes are high, and keeping track of everything can be overwhelming.</p>
-                    <p>We created Ocean Treasury to provide visual analytics for your fleets, so that your captain and crew can <span class="blue-text-oceans-rough">track and document the health of you vessel easily and securely.</span>
+                    <p>We created Ocean Treasury to provide visual analytics for your fleets, so that your captain and crew can <span class="blue-text-oceans-rough">track and document the health of your vessel easily and securely.</span>
                 </div>
             </div>
         </div> 
